--- a/samples/Localization.StarterWeb/Views/Shared/_Layout.cshtml
+++ b/samples/Localization.StarterWeb/Views/Shared/_Layout.cshtml
@@ -3,12 +3,11 @@
 @using Microsoft.AspNet.Localization
 @using Microsoft.AspNet.Mvc.Localization
 
-@* TODO: Doc this *@
+@* When the semantics of the IViewLocalizer aren't suitable, you can directly inject the IHtmlLocalizerFactory
+   and create an IHtmlLocalizer that will look for resources from a location of your choice. *@
 @inject IHtmlLocalizerFactory LocalizerFactory
-
 @{
     var localizer = LocalizerFactory.Create(baseName: "Views.Shared.Layout.cshtml", location: "Localization.StarterWeb");
-    var requestCulture = Context.Features.Get<IRequestCultureFeature>();
 }
 
 <!DOCTYPE html>
@@ -34,7 +33,7 @@
             <div class="container">
                 <div class="navbar-header">
                     <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
-                        <span class="sr-only">Toggle navigation</span>
+                        <span class="sr-only">@localizer["Toggle navigation"]</span>
                         <span class="icon-bar"></span>
                         <span class="icon-bar"></span>
                         <span class="icon-bar"></span>
@@ -43,9 +42,9 @@
                 </div>
                 <div class="navbar-collapse collapse">
                     <ul class="nav navbar-nav">
-                        <li><a asp-controller="Home" asp-action="Index">Home</a></li>
-                        <li><a asp-controller="Home" asp-action="About">About</a></li>
-                        <li><a asp-controller="Home" asp-action="Contact">Contact</a></li>
+                        <li><a asp-controller="Home" asp-action="Index">@localizer["Home"]</a></li>
+                        <li><a asp-controller="Home" asp-action="About">@localizer["About"]</a></li>
+                        <li><a asp-controller="Home" asp-action="Contact">@localizer["Contact"]</a></li>
                     </ul>
                     @await Html.PartialAsync("_LoginPartial")
                 </div>
@@ -57,6 +56,9 @@
             <footer>
                 <p>&copy; 2015 - Localization.StarterWeb</p>
                 <dl>
+                    @{
+                        var requestCulture = Context.Features.Get<IRequestCultureFeature>();
+                    }
                     <dt>Request culture provider:</dt><dd>@(requestCulture.Provider?.GetType().Name ?? "(none)")</dd>
                     <dt>CultureInfo.CurrentCulture:</dt><dd>@CultureInfo.CurrentCulture</dd>
                     <dt>CultureInfo.CurrentUICulture:</dt><dd>@CultureInfo.CurrentUICulture</dd>
