--- a/samples/Localization.StarterWeb/Views/Shared/_Layout.cshtml
+++ b/samples/Localization.StarterWeb/Views/Shared/_Layout.cshtml
@@ -7,7 +7,7 @@
    and create an IHtmlLocalizer that will look for resources from a location of your choice. *@
 @inject IHtmlLocalizerFactory LocalizerFactory
 @{
-    var localizer = LocalizerFactory.Create(baseName: "Views.Shared.Layout.cshtml", location: "Localization.StarterWeb");
+    var localizer = LocalizerFactory.Create(baseName: "Views.Shared._Layout.cshtml", location: "Localization.StarterWeb");
 }
 
 <!DOCTYPE html>
