--- a/samples/Localization.StarterWeb/Views/Home/Contact.cshtml
+++ b/samples/Localization.StarterWeb/Views/Home/Contact.cshtml
@@ -1,5 +1,9 @@
-﻿@{
-    ViewData["Title"] = "Contact";
+﻿@using Microsoft.AspNet.Mvc.Localization
+
+@inject IViewLocalizer Localizer
+
+@{
+    ViewData["Title"] = Localizer["Contact"];
 }
 <h2>@ViewData["Title"].</h2>
 <h3>@ViewData["Message"]</h3>
@@ -7,11 +11,11 @@
 <address>
     One Microsoft Way<br />
     Redmond, WA 98052-6399<br />
-    <abbr title="Phone">P:</abbr>
+    <abbr title="@Localizer["Phone"]">@Localizer["P"]:</abbr>
     425.555.0100
 </address>
 
 <address>
-    <strong>Support:</strong> <a href="mailto:Support@example.com">Support@example.com</a><br />
-    <strong>Marketing:</strong> <a href="mailto:Marketing@example.com">Marketing@example.com</a>
+    <strong>@Localizer["Support"]:</strong> <a href="mailto:Support@example.com">Support@example.com</a><br />
+    <strong>@Localizer["Marketing"]:</strong> <a href="mailto:Marketing@example.com">Marketing@example.com</a>
 </address>
