--- a/samples/Localization.StarterWeb/Views/Home/Index.cshtml
+++ b/samples/Localization.StarterWeb/Views/Home/Index.cshtml
@@ -1,5 +1,15 @@
-﻿@{
-    ViewData["Title"] = "Home Page";
+﻿@using Microsoft.AspNet.Mvc.Localization
+
+@* The IViewLocalizer can be injected into the view. It does two things of interest:
+    1. It HTML can encode *parameters* passed to resource strings (not the resource strings themselves, as they may contain
+       HTML) automatically, and return the result as an IHtmlContent so Razor won't HTML encode it again;
+    2. It looks for localization resources for this view based on the view path, e.g. if the view's path is
+       "/Views/Home/Index.cshtml", then the corresponding resource base path will be "Views.Home.Index.cshtml" *@
+
+@inject IViewLocalizer Localizer
+
+@{
+    ViewData["Title"] = Localizer["Home Page"];
 }
 
 <div id="myCarousel" class="carousel slide" data-ride="carousel" data-interval="6000">
@@ -14,9 +24,9 @@
             <img src="~/images/ASP-NET-Banners-01.png" alt="ASP.NET" class="img-responsive" />
             <div class="carousel-caption">
                 <p>
-                    Learn how to build ASP.NET apps that can run anywhere.
+                    @Localizer["Learn how to build ASP.NET apps that can run anywhere."]
                     <a class="btn btn-default btn-default" href="http://go.microsoft.com/fwlink/?LinkID=525028&clcid=0x409">
-                        Learn More
+                        @Localizer["Learn More"]
                     </a>
                 </p>
             </div>
@@ -25,20 +35,20 @@
             <img src="~/images/Banner-02-VS.png" alt="Visual Studio" class="img-responsive" />
             <div class="carousel-caption">
                 <p>
-                    There are powerful new features in Visual Studio for building modern web apps.
+                    @Localizer["There are powerful new features in Visual Studio for building modern web apps."]
                     <a class="btn btn-default btn-default" href="http://go.microsoft.com/fwlink/?LinkID=525030&clcid=0x409">
-                        Learn More
+                        @Localizer["Learn More"]
                     </a>
                 </p>
             </div>
         </div>
         <div class="item">
-            <img src="~/images/ASP-NET-Banners-02.png" alt="Package Management" class="img-responsive" />
+            <img src="~/images/ASP-NET-Banners-02.png" alt="@Localizer["Package Management"]" class="img-responsive" />
             <div class="carousel-caption">
                 <p>
-                    Bring in libraries from NuGet, Bower, and npm, and automate tasks using Grunt or Gulp.
+                    @Localizer["Bring in libraries from NuGet, Bower, and npm, and automate tasks using Grunt or Gulp."]
                     <a class="btn btn-default btn-default" href="http://go.microsoft.com/fwlink/?LinkID=525029&clcid=0x409">
-                        Learn More
+                        @Localizer["Learn More"]
                     </a>
                 </p>
             </div>
@@ -47,9 +57,9 @@
             <img src="~/images/Banner-01-Azure.png" alt="Microsoft Azure" class="img-responsive" />
             <div class="carousel-caption">
                 <p>
-                    Learn how Microsoft's Azure cloud platform allows you to build, deploy, and scale web apps.
+                    @Localizer["Learn how Microsoft's Azure cloud platform allows you to build, deploy, and scale web apps."]
                     <a class="btn btn-default btn-default" href="http://go.microsoft.com/fwlink/?LinkID=525027&clcid=0x409">
-                        Learn More
+                        @Localizer["Learn More"]
                     </a>
                 </p>
             </div>
@@ -57,54 +67,56 @@
     </div>
     <a class="left carousel-control" href="#myCarousel" role="button" data-slide="prev">
         <span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span>
-        <span class="sr-only">Previous</span>
+        <span class="sr-only">@Localizer["Previous"]</span>
     </a>
     <a class="right carousel-control" href="#myCarousel" role="button" data-slide="next">
         <span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span>
-        <span class="sr-only">Next</span>
+        <span class="sr-only">@Localizer["Next"]</span>
     </a>
 </div>
 
 <div class="row">
     <div class="col-md-3">
-        <h2>Application uses</h2>
+        <h2>@Localizer["Application uses"]</h2>
         <ul>
-            <li>Sample pages using ASP.NET MVC 6</li>
-            <li><a href="http://go.microsoft.com/fwlink/?LinkId=518007">Gulp</a> and <a href="http://go.microsoft.com/fwlink/?LinkId=518004">Bower</a> for managing client-side libraries</li>
-            <li>Theming using <a href="http://go.microsoft.com/fwlink/?LinkID=398939">Bootstrap</a></li>
+            <li>@Localizer["Sample pages using ASP.NET MVC 6"]</li>
+            @* The call to IViewLocalizer.Html will return an IHtmlContent, such that Razor will not try to HTML encode
+               the value. Use this method when localization strings contain HTML themselves. *@
+            <li>@Localizer.Html("<a href=\"http://go.microsoft.com/fwlink/?LinkId=518007\">Gulp</a> and <a href=\"http://go.microsoft.com/fwlink/?LinkId=518004\">Bower</a> for managing client-side libraries")</li>
+            <li>@Localizer.Html("Theming using <a href=\"http://go.microsoft.com/fwlink/?LinkID=398939\">Bootstrap</a>")</li>
         </ul>
     </div>
     <div class="col-md-3">
-        <h2>How to</h2>
+        <h2>@Localizer["How to"]</h2>
         <ul>
-            <li><a href="http://go.microsoft.com/fwlink/?LinkID=398600">Add a Controller and View</a></li>
-            <li><a href="http://go.microsoft.com/fwlink/?LinkID=699314">Add an appsetting in config and access it in app.</a></li>
-            <li><a href="http://go.microsoft.com/fwlink/?LinkId=699315">Manage User Secrets using Secret Manager.</a></li>
-            <li><a href="http://go.microsoft.com/fwlink/?LinkId=699316">Use logging to log a message.</a></li>
-            <li><a href="http://go.microsoft.com/fwlink/?LinkId=699317">Add packages using NuGet.</a></li>
-            <li><a href="http://go.microsoft.com/fwlink/?LinkId=699318">Add client packages using Bower.</a></li>
-            <li><a href="http://go.microsoft.com/fwlink/?LinkId=699319">Target development, staging or production environment.</a></li>
+            <li><a href="http://go.microsoft.com/fwlink/?LinkID=398600">@Localizer["Add a Controller and View"]</a></li>
+            <li><a href="http://go.microsoft.com/fwlink/?LinkID=699314">@Localizer["Add an appsetting in config and access it in app."]</a></li>
+            <li><a href="http://go.microsoft.com/fwlink/?LinkId=699315">@Localizer["Manage User Secrets using Secret Manager."]</a></li>
+            <li><a href="http://go.microsoft.com/fwlink/?LinkId=699316">@Localizer["Use logging to log a message."]</a></li>
+            <li><a href="http://go.microsoft.com/fwlink/?LinkId=699317">@Localizer["Add packages using NuGet."]</a></li>
+            <li><a href="http://go.microsoft.com/fwlink/?LinkId=699318">@Localizer["Add client packages using Bower."]</a></li>
+            <li><a href="http://go.microsoft.com/fwlink/?LinkId=699319">@Localizer["Target development, staging or production environment."]</a></li>
         </ul>
     </div>
     <div class="col-md-3">
-        <h2>Overview</h2>
+        <h2>@Localizer["Overview"]</h2>
         <ul>
-            <li><a href="http://go.microsoft.com/fwlink/?LinkId=518008">Conceptual overview of what is ASP.NET 5</a></li>
-            <li><a href="http://go.microsoft.com/fwlink/?LinkId=699320">Fundamentals of ASP.NET 5 such as Startup and middleware.</a></li>
-            <li><a href="http://go.microsoft.com/fwlink/?LinkId=398602">Working with Data</a></li>
-            <li><a href="http://go.microsoft.com/fwlink/?LinkId=398603">Security</a></li>
-            <li><a href="http://go.microsoft.com/fwlink/?LinkID=699321">Client side development</a></li>
-            <li><a href="http://go.microsoft.com/fwlink/?LinkID=699322">Develop on different platforms</a></li>
-            <li><a href="http://go.microsoft.com/fwlink/?LinkID=699323">Read more on the documentation site</a></li>
+            <li><a href="http://go.microsoft.com/fwlink/?LinkId=518008">@Localizer["Conceptual overview of what is ASP.NET 5"]</a></li>
+            <li><a href="http://go.microsoft.com/fwlink/?LinkId=699320">@Localizer["Fundamentals of ASP.NET 5 such as Startup and middleware."]</a></li>
+            <li><a href="http://go.microsoft.com/fwlink/?LinkId=398602">@Localizer["Working with Data"]</a></li>
+            <li><a href="http://go.microsoft.com/fwlink/?LinkId=398603">@Localizer["Security"]</a></li>
+            <li><a href="http://go.microsoft.com/fwlink/?LinkID=699321">@Localizer["Client side development"]</a></li>
+            <li><a href="http://go.microsoft.com/fwlink/?LinkID=699322">@Localizer["Develop on different platforms"]</a></li>
+            <li><a href="http://go.microsoft.com/fwlink/?LinkID=699323">@Localizer["Read more on the documentation site"]</a></li>
         </ul>
     </div>
     <div class="col-md-3">
-        <h2>Run & Deploy</h2>
+        <h2>@Localizer["Run & Deploy"]</h2>
         <ul>
-            <li><a href="http://go.microsoft.com/fwlink/?LinkID=517851">Run your app</a></li>
-            <li><a href="http://go.microsoft.com/fwlink/?LinkID=517852">Run your app on .NET Core</a></li>
-            <li><a href="http://go.microsoft.com/fwlink/?LinkID=517853">Run commands in your project.json</a></li>
-            <li><a href="http://go.microsoft.com/fwlink/?LinkID=398609">Publish to Microsoft Azure Web Apps</a></li>
+            <li><a href="http://go.microsoft.com/fwlink/?LinkID=517851">@Localizer["Run your app"]</a></li>
+            <li><a href="http://go.microsoft.com/fwlink/?LinkID=517852">@Localizer["Run your app on .NET Core"]</a></li>
+            <li><a href="http://go.microsoft.com/fwlink/?LinkID=517853">@Localizer["Run commands in your project.json"]</a></li>
+            <li><a href="http://go.microsoft.com/fwlink/?LinkID=398609">@Localizer["Publish to Microsoft Azure Web Apps"]</a></li>
         </ul>
     </div>
 </div>
